--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "dev-all": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
