Add .gitignore to ignore temp files

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ dist/
 build/
 .tmp/
 .cache/
-
+%USERPROFILE%/
+%USERPROFILE%/npm-cache/
+%USERPROFILE%/npm-cache/_cacache/
 # ============================
 # Environment files
 # ============================
