Update project: configs, components, UI and docs

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,8 @@ build/
 %USERPROFILE%/
 %USERPROFILE%/npm-cache/
 %USERPROFILE%/npm-cache/_cacache/
-%USERPROFILE%/npm-cache/
 # ============================
-# Environment files
+# Environment fileslz
 # ============================
 .env
 .env.local
